fix: NoSuchElementException 이슈 해결을 위해 java 8 버전으로 변경